doc/windows/Delphi/64bit/single_card/gts.pas


function GT_SetCrdMapBase(crd:SmallInt;base:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_GetCrdMapBase(crd:SmallInt;out pBase:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_SetCrdSmooth(crd:SmallInt;var pCrdSmooth:TCrdSmooth):SmallInt;stdcall;External GTDLL;
function GT_GetCrdSmooth(crd:SmallInt;out pCrdSmooth:TCrdSmooth):SmallInt;stdcall;External GTDLL;
function GT_SetCrdJerk(crd:SmallInt;jerkMax:Double):SmallInt;stdcall;External GTDLL;
function GT_GetCrdJerk(crd:SmallInt;out pJerkMax:Double):SmallInt;stdcall;External GTDLL;
function GT_SetCrdPrm(crd:SmallInt;var pCrdPrm:TCrdPrm):SmallInt;stdcall;External GTDLL;
function GT_GetCrdPrm(crd:SmallInt;out pCrdPrm:TCrdPrm):SmallInt;stdcall;External GTDLL;
function GT_SetArcAllowError(crd:SmallInt;error:Double):SmallInt;stdcall;External GTDLL;
function GT_CrdSpace(crd:SmallInt;out pSpace:LongInt; fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_CrdData(crd:SmallInt;var pCrdData:TCrdData; fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_CrdDataCircle(crd:SmallInt;var pCrdData:TCrdData ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXY(crd:SmallInt ;x:LongInt ;y:LongInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZ(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZA(crd:SmallInt ;x:LongInt; y:LongInt;z:LongInt;a:LongInt;synVel:Double ;synAcc:Double;velEnd:Double =0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0(crd:SmallInt;x:LongInt;y:LongInt;synVel:Double ;synAcc:Double ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0(crd:SmallInt ;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYR(crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYC(crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double ;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZR(crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZC(crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double ;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXR(crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXC(crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double ;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYZ(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;interX:Double;interY:Double;interZ:Double;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYOverride2(crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0Override2(crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0Override2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0Override2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYROverride2(crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYCOverride2(crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZROverride2(crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZCOverride2(crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXROverride2(crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXCOverride2(crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZ(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZ(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRX(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCX(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRY(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCY(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRXOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCXOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRYOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCYOverride2(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYWN(crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0WN(crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYRWN(crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYCWN(crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZRWN(crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZCWN(crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXRWN(crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXCWN(crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYZWN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;interX:Double;interY:Double;interZ:Double;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAOverride2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0Override2WN(crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0Override2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0Override2WN(crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYROverride2WN(crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
